[ADD] also transitioned html mode, fixed parentheses typo

--- a/SubEthaEdit-Mac/Documentation/SyntaxScopes/SEEScopeDoc.html
+++ b/SubEthaEdit-Mac/Documentation/SyntaxScopes/SEEScopeDoc.html
@@ -660,11 +660,11 @@
                 <td>
                   <div class="examples">
                     <tt>&amp;lt;</tt>
-                    <span class="language">xml</span>
+                    <span class="language">xml html</span>
                     <tt>&amp;#160;</tt>
-                    <span class="language">xml</span>
+                    <span class="language">xml html</span>
                     <tt>&amp;#x2014;</tt>
-                    <span class="language">xml</span>
+                    <span class="language">xml html</span>
                   </div>
                 </td>
               </tr>
@@ -690,7 +690,7 @@
                 <td>
                   <div class="examples">
                     <tt>--</tt>
-                    <span class="language">xml</span>
+                    <span class="language">xml html</span>
                   </div>
                 </td>
               </tr>
@@ -701,7 +701,7 @@
                 <td>
                   <div class="examples">
                     <tt>&amp;</tt>
-                    <span class="language">xml</span>
+                    <span class="language">xml html</span>
                   </div>
                 </td>
               </tr>
@@ -719,7 +719,7 @@
                 <td>
                   <div class="examples">
                     <tt>&lt;!-- SGML Comment --&gt;</tt>
-                    <span class="language">xml</span>
+                    <span class="language">xml html</span>
                   </div>
                 </td>
               </tr>
@@ -730,7 +730,7 @@
                 <td>
                   <div class="examples">
                     <tt>&lt;![CDATA[&lt;inline&gt;Data&lt;/inline&gt;]]&gt;</tt>
-                    <span class="language">xml</span>
+                    <span class="language">xml html</span>
                   </div>
                 </td>
               </tr>
@@ -740,8 +740,8 @@
                 </td>
                 <td>
                   <div class="examples">
-                    <tt>&lt;?xml version='1.0' encoding='utf-8'?&gt;</tt>
-                    <span class="language">xml</span>
+                    <tt>&lt;?xml html version='1.0' encoding='utf-8'?&gt;</tt>
+                    <span class="language">xml html</span>
                   </div>
                 </td>
               </tr>
@@ -752,9 +752,9 @@
                 <td>
                   <div class="examples">
                     <tt>&lt;document&gt;</tt>
-                    <span class="language">xml</span>
+                    <span class="language">xml html</span>
                     <tt>&lt;br/&gt;</tt>
-                    <span class="language">xml</span>
+                    <span class="language">xml html</span>
                   </div>
                 </td>
               </tr>
@@ -765,11 +765,11 @@
                 <td>
                   <div class="examples">
                     <tt>href</tt>
-                    <span class="language">xml</span>
+                    <span class="language">xml html</span>
                     <tt>id</tt>
-                    <span class="language">xml</span>
+                    <span class="language">xml html</span>
                     <tt>class</tt>
-                    <span class="language">xml</span>
+                    <span class="language">xml html</span>
                   </div>
                 </td>
               </tr>
@@ -788,9 +788,9 @@
                 <td>
                   <div class="examples">
                     <tt>"left"</tt>
-                    <span class="language">xml</span>
+                    <span class="language">xml html</span>
                     <tt>"utf-8"</tt>
-                    <span class="language">xml</span>
+                    <span class="language">xml html</span>
                   </div>
                 </td>
               </tr>
@@ -801,9 +801,9 @@
                 <td>
                   <div class="examples">
                     <tt>&lt;!DOCTYPE &gt;</tt>
-                    <span class="language">xml</span>
+                    <span class="language">xml html</span>
                     <tt>&lt;!ENTITY &gt;</tt>
-                    <span class="language">xml</span>
+                    <span class="language">xml html</span>
                   </div>
                 </td>
               </tr>
@@ -814,7 +814,7 @@
                 <td>
                   <div class="examples">
                     <tt>"spec.dtd"</tt>
-                    <span class="language">xml</span>
+                    <span class="language">xml html</span>
                   </div>
                 </td>
               </tr>
@@ -825,7 +825,7 @@
                 <td>
                   <div class="examples">
                     <tt>'&lt;'</tt>
-                    <span class="language">xml</span>
+                    <span class="language">xml html</span>
                   </div>
                 </td>
               </tr>
@@ -836,9 +836,9 @@
                 <td>
                   <div class="examples">
                     <tt>"utf-8"</tt>
-                    <span class="language">xml</span>
+                    <span class="language">xml html</span>
                     <tt>'no'</tt>
-                    <span class="language">xml</span>
+                    <span class="language">xml html</span>
                   </div>
                 </td>
               </tr>
