[CHANGE] updated PHP-HTML mode to new scoping

--- a/SubEthaEdit-Mac/Documentation/SyntaxScopes/SEEScopeDoc.html
+++ b/SubEthaEdit-Mac/Documentation/SyntaxScopes/SEEScopeDoc.html
@@ -343,6 +343,17 @@
                   </div>
                 </td>
               </tr>
+              <tr>
+                <td>
+                  <tt>language.variable</tt>
+                </td>
+                <td>
+                  <div class="examples">
+                    <tt>$my_var</tt>
+                    <span class="language">php</span>
+                  </div>
+                </td>
+              </tr>
             </table>
           </div>
           <p class="syntax_scope_description">language constructs like function calls, method calls, etc</p>
@@ -452,6 +463,17 @@
               </tr>
               <tr>
                 <td>
+                  <tt>string.here-doc</tt>
+                </td>
+                <td>
+                  <div class="examples">
+                    <tt>&lt;&lt;&lt;EOT  something direct EOT;</tt>
+                    <span class="language">php</span>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td>
                   <tt>string.double.nsstring</tt>
                 </td>
                 <td>
@@ -476,6 +498,32 @@
                   <div class="examples">
                     <tt>code libraries</tt>
                     <span class="language">coda</span>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <tt>support.function</tt>
+                </td>
+                <td>
+                  <div class="examples">
+                    <tt>htmlentities</tt>
+                    <span class="language">php</span>
+                    <tt>array_splice</tt>
+                    <span class="language">php</span>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <tt>support.method.special</tt>
+                </td>
+                <td>
+                  <div class="examples">
+                    <tt>__construct</tt>
+                    <span class="language">php</span>
+                    <tt>__clone</tt>
+                    <span class="language">php</span>
                   </div>
                 </td>
               </tr>
@@ -799,6 +847,19 @@
                     <span class="language">coda</span>
                     <tt>&lt;?xml html version='1.0' encoding='utf-8'?&gt;</tt>
                     <span class="language">xml html</span>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <tt>markup.processing.languageswitch</tt>
+                </td>
+                <td>
+                  <div class="examples">
+                    <tt>&lt;?php</tt>
+                    <span class="language">php</span>
+                    <tt>?&gt;</tt>
+                    <span class="language">php</span>
                   </div>
                 </td>
               </tr>
