[CHANGE] updated documentation, fixed typo in objective-j mode

--- a/SubEthaEdit-Mac/Documentation/SyntaxScopes/SEEScopeDoc.html
+++ b/SubEthaEdit-Mac/Documentation/SyntaxScopes/SEEScopeDoc.html
@@ -326,6 +326,17 @@
                   </div>
                 </td>
               </tr>
+              <tr>
+                <td>
+                  <tt>keyword.directive</tt>
+                </td>
+                <td>
+                  <div class="examples">
+                    <tt>@implementation</tt>
+                    <span class="language">obj-c obj-j</span>
+                  </div>
+                </td>
+              </tr>
             </table>
           </div>
           <p class="syntax_scope_description">Language Keywords</p>
@@ -351,6 +362,17 @@
                     <span class="language">coda</span>
                     <tt>my_function_call()</tt>
                     <span class="language">js</span>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <tt>language.method</tt>
+                </td>
+                <td>
+                  <div class="examples">
+                    <tt>[Some selector:with:you:know:]</tt>
+                    <span class="language">obj-c obj-j</span>
                   </div>
                 </td>
               </tr>
@@ -409,7 +431,7 @@
                 <td>
                   <div class="examples">
                     <tt>'c'</tt>
-                    <span class="language">java c</span>
+                    <span class="language">java c obj-c</span>
                   </div>
                 </td>
               </tr>
