[CHANGE] working towards a CFML mode with folding

--- a/SubEthaEdit-Mac/Documentation/SyntaxScopes/SEEScopeDoc.html
+++ b/SubEthaEdit-Mac/Documentation/SyntaxScopes/SEEScopeDoc.html
@@ -401,6 +401,17 @@
               </tr>
               <tr>
                 <td>
+                  <tt>language.preprocessor</tt>
+                </td>
+                <td>
+                  <div class="examples">
+                    <tt>#include</tt>
+                    <span class="language">c</span>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td>
                   <tt>language.function</tt>
                 </td>
                 <td>
