[HELP] removed broken Online Documentation link;

--- a/SubEthaEdit-Mac/English.lproj/SubEthaEditHelp/SubEthaEdit Help.html
+++ b/SubEthaEdit-Mac/English.lproj/SubEthaEditHelp/SubEthaEdit Help.html
@@ -45,10 +45,7 @@
 					<h3><a href="html/learn.html"><font face="Lucida Grande,Arial,sans-serif">Learn About SubEthaEdit<br>
 								<br>
 							</font></a></h3>
-					<h3><a href="html/problems.html"><font face="Lucida Grande,Arial,sans-serif">Solving Problems</font></a>								<br><br>
-</h3>
-					<h3><a href="http://www.codingmonkeys.de/subethaedit/documentation"><font face="Lucida Grande,Arial,sans-serif">Online Documentation<br>
-							</font></a></h3>
+					<h3><a href="html/problems.html"><font face="Lucida Grande,Arial,sans-serif">Solving Problems</font></a><br><br></h3>
 				</td>
 				<td align="left" valign="middle" width="43"></td>
 			</tr>
