--- a/SubEthaEdit-Mac/German.lproj/SubEthaEditHelp/SubEthaEdit Help.html
+++ b/SubEthaEdit-Mac/German.lproj/SubEthaEditHelp/SubEthaEdit Help.html
@@ -45,10 +45,7 @@
 					<h3><a href="html/learn.html"><font face="Lucida Grande,Arial,sans-serif">Informationen &uuml;ber SubEthaEdit<br>
 								<br>
 							</font></a></h3>
-					<h3><a href="html/problems.html"><font face="Lucida Grande,Arial,sans-serif">Fehlerbeseitigung</font></a>								<br><br>
-</h3>
-					<h3><a href="http://www.codingmonkeys.de/subethaedit/dokumentation"><font face="Lucida Grande,Arial,sans-serif">Online Dokumentation<br>
-							</font></a></h3>
+					<h3><a href="html/problems.html"><font face="Lucida Grande,Arial,sans-serif">Fehlerbeseitigung</font></a><br><br></h3>
 				</td>
 				<td align="left" valign="middle" width="43"></td>
 			</tr>
